--- a/PALETA.html
+++ b/PALETA.html
@@ -129,66 +129,172 @@
 	<main>
 		<!-- SECCIÓ 1 -->
 
-		<section class="container-fluid py-5">
-			<div class="container">
-				<div class="row">
-					<div class="col-12 col-md-6">
-						<h3 class="sectitol__h3">Categoria 1</h3>
-
-						<div class="accordion" id="accordionExample">
-							<div class="card">
-								<div class="card-header" id="headingOne">
-									<h2 class="mb-0">
-										<button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
-											data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Collapsible Group Item #1
-										</button>
-									</h2>
-								</div>
-
-								<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
-									data-parent="#accordionExample">
-									<div class="card-body">
-										<code>&lt;p&gt;Sample text here...&lt;/p&gt; &lt;p&gt;And
-												another line of sample text here...&lt;/p&gt;
-											</code>
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingTwo">
-									<h2 class="mb-0">
-										<button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-											data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-											Collapsible Group Item #2
-										</button>
-									</h2>
-								</div>
-								<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-									<div class="card-body">
-										<code>&lt;p&gt;Sample text here...&lt;/p&gt; &lt;p&gt;And
-												another line of sample text here...&lt;/p&gt;
-											</code>
-									</div>
-								</div>
-							</div>
-							<div class="card">
-								<div class="card-header" id="headingThree">
-									<h2 class="mb-0">
-										<button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-											data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-											Collapsible Group Item #3
-										</button>
-									</h2>
-								</div>
-								<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-									<div class="card-body">
-										<code>&lt;p&gt;Sample text here...&lt;/p&gt; &lt;p&gt;And
-												another line of sample text here...&lt;/p&gt;
-											</code>
-									</div>
-								</div>
-							</div>
+		<section class="container-fluid py-md-5 bg-secondary" id="palleteoversecondary">
+			<div class="container-fluid my-md-3 text-center">
+				<h3 class="sectitol__h4 text-uppercase mb-3">Pallette over Secondary</h3>
+				<div class="row justify-content-around text-light">
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-blue">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-indigo">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-purple">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-pink">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-red">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-orange">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-yellow">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-green">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-teal">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-cyan">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="container-fluid py-md-5 bg-dark text-light" id="palletteoverdark">
+			<div class="container-fluid my-md-3 text-center">
+				<h3 class="sectitol__h4 text-uppercase mb-3">Pallette over dark</h3>
+				<div class="row justify-content-around text-light">
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-blue">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-indigo">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-purple">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-pink">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-red">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-orange">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-yellow">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-green">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-teal">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-cyan">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="container-fluid py-md-5" id="palletteoverwhite">
+			<div class="container-fluid my-md-3 text-center">
+				<h3 class="sectitol__h4 text-uppercase mb-3">PALETTE OVER WHITE</h3>
+				<div class="row justify-content-around text-light">
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-blue">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-indigo">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-purple">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-pink">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-red">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-orange">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-yellow">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-green">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-teal">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
+						</div>
+					</div>
+					<div class="card col-4 col-sm-6 col-md-1 py-4 mx-1 my-1 bg-cyan">
+						<div class="card-body">
+							<h5 class="card-title"></h5>
 						</div>
 					</div>
 				</div>
